--- a/spa/package.json
+++ b/spa/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/howler": "^2.2.4",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "howler": "^2.2.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
