--- a/.env.default
+++ b/.env.default
@@ -1,1 +1,5 @@
 DB_PASSWORD=YOUR_DB_PASSWORD
+LIFF_ID=YOUR_LIFF_ID
+LINE_CHANNEL_ID=YOUR_LINE_CHANNEL_ID
+LINE_CHANNEL_SECRET=YOUR_LINE_CHANNEL_SECRET
+LINE_CHANNEL_TOKEN=YOUR_LINE_CHANNEL_TOKEN
