--- a/spa/package.json
+++ b/spa/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@line/liff": "^2.18.1",
     "@types/howler": "^2.2.4",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
