--- a/.env.default
+++ b/.env.default
@@ -3,3 +3,4 @@ LIFF_ID=YOUR_LIFF_ID
 LINE_CHANNEL_ID=YOUR_LINE_CHANNEL_ID
 LINE_CHANNEL_SECRET=YOUR_LINE_CHANNEL_SECRET
 LINE_CHANNEL_TOKEN=YOUR_LINE_CHANNEL_TOKEN
+HOST=YOUR_HOST
