--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       - DB_PASSWORD=${DB_PASSWORD}
       - LIFF_ID=${LIFF_ID}
-      - LINE_CHANNEL_ID=${LINE_CHANNEL_ID}
+      - LINE_LOGIN_CHANNEL_ID=${LINE_LOGIN_CHANNEL_ID}
       - LINE_CHANNEL_SECRET=${LINE_CHANNEL_SECRET}
       - LINE_CHANNEL_TOKEN=${LINE_CHANNEL_TOKEN}
       - HOST=${HOST}
