--- a/.env.default
+++ b/.env.default
@@ -3,4 +3,4 @@ LINE_LOGIN_CHANNEL_ID=YOUR_LINE_LOGIN_CHANNEL_ID
 LIFF_ID=YOUR_LIFF_ID
 LINE_CHANNEL_SECRET=YOUR_LINE_CHANNEL_SECRET
 LINE_CHANNEL_TOKEN=YOUR_LINE_CHANNEL_TOKEN
-HOST=YOUR_HOST
+RAILS_HOST=YOUR_RAILS_HOST
