--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   db:
     image: postgres
     restart: always
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     environment:
       - TZ="Asia/Tokyo"
       - POSTGRES_INITDB_ARGS="--encoding=UTF-8"
@@ -21,10 +23,12 @@ services:
       - LINE_LOGIN_CHANNEL_ID=${LINE_LOGIN_CHANNEL_ID}
       - LINE_CHANNEL_SECRET=${LINE_CHANNEL_SECRET}
       - LINE_CHANNEL_TOKEN=${LINE_CHANNEL_TOKEN}
-      - HOST=${HOST}
+      - RAILS_HOST=${RAILS_HOST}
     ports:
       - "3000:3000"
       # for development
       - "8888:8888"
     depends_on:
       - db
+volumes:
+  pgdata:
